# aws-s3-rds

./: .dockerignore  Dockerfile  README.md  README_FASTAPI.md  app.py  app_fastapi.py  app_flask.py  app_streamlit.py  db.py  db_lightsail_mysql.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_fastapi.txt  test_s3.py
templates/: index.html
